[gd_scene load_steps=8 format=3 uid="uid://dqwwtsntni62j"]

[ext_resource type="Script" uid="uid://0v5uwbxt1wkh" path="res://Components/MapDisplay/map_display.gd" id="1_82s18"]
[ext_resource type="Script" uid="uid://do0avs7t5nm2e" path="res://Components/MapDisplay/panning_handler.gd" id="2_qn6yq"]
[ext_resource type="Script" uid="uid://d1sq4es1dlqpy" path="res://Components/MapDisplay/fog_of_war_handler.gd" id="4_mbbb0"]
[ext_resource type="PackedScene" uid="uid://dxd0kh8rswpem" path="res://Components/PowerLineDrawer/power_line_drawer.tscn" id="5_xaoq4"]
[ext_resource type="Texture2D" uid="uid://48vj7npce78t" path="res://Assets/Fog.png" id="7_j1rc0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_66nex"]
texture = ExtResource("7_j1rc0")
texture_region_size = Vector2i(512, 512)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_r7aiw"]
tile_size = Vector2i(512, 512)
sources/0 = SubResource("TileSetAtlasSource_66nex")

[node name="MapDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_82s18")
solidity_color = Color(0.4466, 0.45327, 0.58, 1)

[node name="FogOfWarHandler" type="Node" parent="." node_paths=PackedStringArray("scrollable_container", "fog")]
script = ExtResource("4_mbbb0")
scrollable_container = NodePath("../MapMargin/MapPanel/MapPadding/MapContainer/ScrollableContainer")
fog = NodePath("../MapMargin/MapPanel/MapPadding/MapContainer/ScrollableContainer/Fog")

[node name="MapViewHandler" type="Node" parent="." node_paths=PackedStringArray("scrollable_container", "map_control")]
script = ExtResource("2_qn6yq")
scrollable_container = NodePath("../MapMargin/MapPanel/MapPadding/MapContainer/ScrollableContainer")
map_control = NodePath("../MapMargin/MapPanel/MapPadding/MapContainer")

[node name="MapMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="MapPanel" type="Panel" parent="MapMargin"]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="MapPadding" type="MarginContainer" parent="MapMargin/MapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MapContainer" type="Control" parent="MapMargin/MapPanel/MapPadding"]
clip_contents = true
layout_mode = 2
focus_mode = 2

[node name="ScrollableContainer" type="Node2D" parent="MapMargin/MapPanel/MapPadding/MapContainer"]
scale = Vector2(0.4, 0.4)

[node name="Fog" type="TileMapLayer" parent="MapMargin/MapPanel/MapPadding/MapContainer/ScrollableContainer"]
z_index = 1
tile_set = SubResource("TileSet_r7aiw")

[node name="PowerLineDrawer" parent="MapMargin/MapPanel/MapPadding/MapContainer/ScrollableContainer" instance=ExtResource("5_xaoq4")]
line_width = 10.0
line_color = Color(1, 1, 0, 0.784314)
